--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate:icons": "tsx scripts/generate-icons.ts"
   },
   "devDependencies": {
+    "@types/node": "^24.5.1",
     "typescript": "~5.8.3",
     "vite": "^7.1.2"
   }
